ADDED:KPIKit front-end barebone project files

--- a/KPIKit/www/templates/login.html
+++ b/KPIKit/www/templates/login.html
@@ -10,7 +10,7 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">微信号ID</span>
-          <input type="text" ng-model="loginData.username">
+          <input type="text" ng-model="loginData.subscriberId">
         </label>
         <label class="item item-input item-select">
           <span class="input-label">公众号类型</span>
